force-app/main/default/objects/PF_Run_Stage__c/PF_Run_Stage__c.object-meta.xml
<CustomObject>
    <description>Tracks individual stage execution within a Prompt Factory pipeline run</description>
    <label>Prompt Factory Run Stage</label>
    <nameField>
        <displayFormat>PFRS-{00000000}</displayFormat>
        <label>Stage Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prompt Factory Run Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>