force-app/main/default/objects/PF_Run_Stage__c/fields/AI_Reasoning__c.field-meta.xml
<CustomField>
    <fullName>AI_Reasoning__c</fullName>
    <description>AI explanation of decisions made during this stage</description>
    <label>AI Reasoning</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>