force-app/main/default/objects/PF_Run_Stage__c/fields/Completed_At__c.field-meta.xml
<CustomField>
    <fullName>Completed_At__c</fullName>
    <description>Timestamp when this stage completed</description>
    <label>Completed At</label>
    <type>DateTime</type>
</CustomField>