force-app/main/default/objects/PF_Run_Stage__c/fields/Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_Seconds__c</fullName>
    <description>Execution time in seconds for this stage</description>
    <label>Duration (Seconds)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>