force-app/main/default/objects/PF_Run_Stage__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error message if this stage failed</description>
    <label>Error Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>