force-app/main/default/objects/PF_Run_Stage__c/fields/Input_Data__c.field-meta.xml
<CustomField>
    <fullName>Input_Data__c</fullName>
    <description>Input data/context for this stage (JSON or text)</description>
    <label>Input Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>