force-app/main/default/objects/PF_Run_Stage__c/fields/Output_Data__c.field-meta.xml
<CustomField>
    <fullName>Output_Data__c</fullName>
    <description>Output data generated by this stage (JSON or text)</description>
    <label>Output Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>