force-app/main/default/objects/PF_Run_Stage__c/fields/Related_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Related_Mapping__c</fullName>
    <description>ID of the related mapping</description>
    <label>Related Mapping</label>
    <length>18</length>
    <type>Text</type>
</CustomField>