force-app/main/default/objects/PF_Run_Stage__c/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <description>Name of the pipeline stage (e.g., Intelligence Retrieval, Schema Discovery)</description>
    <label>Stage Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>