force-app/main/default/objects/PF_Run_Stage__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <description>Stage number in the pipeline (1-12)</description>
    <label>Stage Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>