force-app/main/default/objects/PF_Run_Stage__c/fields/Started_At__c.field-meta.xml
<CustomField>
    <fullName>Started_At__c</fullName>
    <description>Timestamp when this stage started executing</description>
    <label>Started At</label>
    <type>DateTime</type>
</CustomField>