force-app/main/default/objects/PF_Run_Stage__c/validationRules/Stage_Number_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Number_Range</fullName>
    <active>true</active>
    <description>Ensures Stage Number is between 1 and 12</description>
    <errorConditionFormula>OR(
    Stage_Number__c &lt; 1,
    Stage_Number__c &gt; 12
)</errorConditionFormula>
    <errorDisplayField>Stage_Number__c</errorDisplayField>
    <errorMessage>Stage Number must be between 1 and 12</errorMessage>
</ValidationRule>